--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Parasite Tapper</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- Telegram SDK -->
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
   <header>
@@ -56,7 +58,7 @@
       </div>
     </section>
 
-    <!-- 🏆 Achievements button (bottom right) -->
+    <!-- 🏆 Achievements button -->
     <button id="achievements-button">
       <img src="assets/achievement.png" alt="Achievements" style="width: 22px;" />
     </button>
@@ -75,5 +77,11 @@
   </main>
 
   <script src="game.js"></script>
+  <script>
+    // Telegram WebApp fullscreen
+    if (window.Telegram && Telegram.WebApp) {
+      Telegram.WebApp.expand();
+    }
+  </script>
 </body>
 </html>
