--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
+  <!-- NEW: Динамические фоновые вирусы -->
+  <div id="floating-virus-container"></div>
+
   <!-- Фон -->
   <div id="background-overlay"></div>
   <div class="infect-border"></div>
@@ -96,6 +99,7 @@
 
   <!-- SCRIPT -->
   <script src="game.js"></script>
+  <script src="floating-viruses.js"></script>
   <script>
     if (window.Telegram && Telegram.WebApp) Telegram.WebApp.expand();
 
@@ -124,7 +128,6 @@
       }, 2000);
     });
 
-    // Заражённый фон при апгрейде
     function triggerInfectionEffect() {
       const layer = document.getElementById('infection-layer');
       layer.className = 'infection-effect';
