Тест: проверка обновления

--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@
       </div>
     </header>
     <main class="virus-area">
-      <img src="assets/virus.png" class="tap-virus main-virus" alt="Virus" />
-      <button id="infect-button" class="infect-btn">INFECT</button>
-    </main>
+  <!-- Вирус-БОСС -->
+  <div id="boss-virus-container">
+    <img src="assets/virus.png" alt="Boss Virus" id="boss-virus" />
+    <!-- В будущем сюда можно вставить HP -->
+  </div>
+
+  <!-- Огромная кнопка INFECT -->
+  <button id="infect-button" class="infect-btn big-infect">INFECT</button>
+</main>
   </section>
 
   <!-- MUTATIONS TAB -->
