--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-  <!-- NEW: Динамические фоновые вирусы -->
+  <!-- Фон и эффект -->
   <div id="floating-virus-container"></div>
-
-  <!-- Фон -->
   <div id="background-overlay"></div>
   <div class="infect-border"></div>
   <div id="infection-layer" class=""></div>
@@ -26,15 +24,12 @@
       </div>
     </header>
     <main class="virus-area">
-  <!-- Вирус-БОСС -->
-  <div id="boss-virus-container">
-    <img src="assets/virus.png" alt="Boss Virus" id="boss-virus" />
-    <!-- В будущем сюда можно вставить HP -->
+      <div id="boss-virus-container">
+  <div id="boss-virus">
+    <button id="infect-button" class="transparent-hitbox"></button>
   </div>
-
-  <!-- Огромная кнопка INFECT -->
-  <button id="infect-button" class="infect-btn big-infect">INFECT</button>
-</main>
+</div>
+    </main>
   </section>
 
   <!-- MUTATIONS TAB -->
@@ -128,7 +123,7 @@
     window.addEventListener("DOMContentLoaded", () => {
       setTimeout(() => {
         const virus = document.querySelector('.tap-virus');
-        virus.classList.add('mutating');
+        virus?.classList.add('mutating');
         const border = document.querySelector('.infect-border');
         border.style.display = 'block';
       }, 2000);
