Тест: проверка обновления

--- a/index.html
+++ b/index.html
@@ -59,13 +59,11 @@
           </div>
         </div>
         <div class="mutation" data-id="autoclick">
-          <img src="assets/virus.png" />
-          <div>
-            <strong>Auto Clicker <span class="level" data-id="autoclick">x0</span></strong>
-            <p>COST: 200</p>
-          </div>
-        </div>
-      </div>
+  <img src="assets/autoclick.png" />
+  <div>
+    <strong>Auto Clicker <span class="level" data-id="autoclick">x0</span></strong>
+    <p>COST: 200</p>
+  </div>
     </main>
   </section>
 
