Тест: проверка обновления

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <img src="assets/virus.png" class="virus-icon" alt="Virus" />
         <span id="virus-count">0</span>
         <span class="virus-label">viruses</span>
+        <div id="rank-display">
+  <img id="rank-icon" src="assets/rank1.png" alt="Rank" />
+  <span id="rank-name">Новичок</span>
+</div>
       </div>
     </header>
     <main class="virus-area">
