--- a/index.html
+++ b/index.html
@@ -21,18 +21,20 @@
         <img src="assets/virus.png" class="virus-icon" alt="Virus" />
         <span id="virus-count">0</span>
         <span class="virus-label">viruses</span>
-        <div id="rank-display">
-  <img id="rank-icon" src="assets/rank1.png" alt="Rank" />
-  <span id="rank-name">Новичок</span>
-</div>
+        <!-- Ранг -->
+        <div class="rank-display">
+          <img id="rank-image" src="assets/rank1.png" alt="Rank Icon" />
+          <span id="rank-name">Новичок</span>
+        </div>
       </div>
     </header>
+
     <main class="virus-area">
       <div id="boss-virus-container">
-  <div id="boss-virus">
-    <button id="infect-button" class="transparent-hitbox"></button>
-  </div>
-</div>
+        <div id="boss-virus">
+          <button id="infect-button" class="transparent-hitbox"></button>
+        </div>
+      </div>
     </main>
   </section>
 
@@ -63,11 +65,13 @@
           </div>
         </div>
         <div class="mutation" data-id="autoclick">
-  <img src="assets/autoclick.png" />
-  <div>
-    <strong>Auto Clicker <span class="level" data-id="autoclick">x0</span></strong>
-    <p>COST: 200</p>
-  </div>
+          <img src="assets/autoclick.png" />
+          <div>
+            <strong>Auto Clicker <span class="level" data-id="autoclick">x0</span></strong>
+            <p>COST: 200</p>
+          </div>
+        </div>
+      </div>
     </main>
   </section>
 
@@ -91,7 +95,13 @@
     <main><h2>Settings</h2><p>Language / Sound / Reset / Help</p></main>
   </section>
 
-  <!-- BOTTOM NAVIGATION -->
+  <!-- Всплывающее окно при повышении ранга -->
+  <div id="rank-popup" class="hidden">
+    <img id="rank-popup-img" src="" alt="Rank Popup" />
+    <div id="rank-popup-name"></div>
+  </div>
+
+  <!-- Навигация -->
   <footer class="bottom-nav">
     <button class="nav-btn active" data-tab="infect">🦠<span>Infect</span></button>
     <button class="nav-btn" data-tab="mutations">🧬<span>Mutations</span></button>
@@ -100,7 +110,7 @@
     <button class="nav-btn" data-tab="settings">⚙️<span>Settings</span></button>
   </footer>
 
-  <!-- SCRIPT -->
+  <!-- JS -->
   <script src="game.js"></script>
   <script src="floating-viruses.js"></script>
   <script>
@@ -121,7 +131,7 @@
       });
     });
 
-    // Заражение при старте
+    // Эффект заражения при загрузке
     window.addEventListener("DOMContentLoaded", () => {
       setTimeout(() => {
         const virus = document.querySelector('.tap-virus');
