Тест: проверка обновления

--- a/index.html
+++ b/index.html
@@ -96,10 +96,12 @@
   </section>
 
   <!-- Всплывающее окно при повышении ранга -->
-  <div id="rank-popup" class="hidden">
-    <img id="rank-popup-img" src="" alt="Rank Popup" />
-    <div id="rank-popup-name"></div>
-  </div>
+<div id="rank-popup" class="hidden">
+  <img id="rank-popup-img" src="" alt="Rank Popup" />
+  <div id="rank-popup-name"></div>
+  <button id="rank-popup-ok">OK</button>
+</div>
+
 
   <!-- Навигация -->
   <footer class="bottom-nav">
