Тест: проверка обновления

--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
   <!-- JS -->
   <script type="module" src="game.js"></script>
   <script type="module" src="tabs.js"></script>
+  <script type="module" src="floating-viruses.js"></script>
+
 
   <!-- INLINE CARD RENDER -->
   <script type="module">
