Тест: проверка обновления

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <img src="assets/virus.png" class="virus-icon" alt="Virus" />
         <span id="virus-count">0</span>
         <span class="virus-label">viruses</span>
+        <div id="income-per-hour" class="income-indicator">+0 / hour</div>
         <div class="rank-display">
           <img id="rank-image" src="assets/rank1.png" alt="Rank Icon" />
           <span id="rank-name">Новичок</span>
@@ -195,6 +196,15 @@
       background-color: gray;
       cursor: default;
     }
+
+    .income-indicator {
+  font-size: 14px;
+  font-weight: bold;
+  color: #00ff99;
+  margin-top: 4px;
+  text-shadow: 0 0 4px #000;
+}
+
   </style>
 </body>
 </html>
